--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -46,7 +46,7 @@ spring:
 logging:
   config: classpath:logback.xml
   level:
-     com.attencecheckin.forumcrawl.dao : trace
+     com.attencecheckin.javabackend.dao : debug
 ## 该配置节点为独立的节点，有很多同学容易将这个配置放在spring的节点下，导致配置无法被识别
 mybatis:
   mapper-locations: classpath:mapper/*.xml  #注意：一定要对应mapper映射xml文件的所在路径
