--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,6 +2,7 @@
 server:
   port : 8888
   servlet:
+    context-path: /javaAttenceCheckIn
 aliyun:
   oss:
     endpoint : oss-ap-northeast-1.aliyuncs.com
@@ -19,9 +20,9 @@ wx:
 spring:
     datasource:
         name: test
-        url: jdbc:mysql://118.89.188.137:3306/attencecheck?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&autoReconnect=true&failOverReadOnly=false&serverTimezone=GMT%2B8
+        url: jdbc:mysql://localhost:3306/attencecheck?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&autoReconnect=true&failOverReadOnly=false&serverTimezone=GMT%2B8
         username: root
-        password: Admin123!
+        password: root
         driver-class-name: com.mysql.cj.jdbc.Driver
         filters: stat
         maxActive: 20
